@@ -1,0 +1,10 @@
+""" Interfaces
+"""
+
+from zope.interface import Interface
+
+
+class ITemporalCoverageAdapter(Interface):
+    """ Marker interface for objects that will return temporalCoverage values
+    """
+
